--- a/common/src/main/resources/assets/chatheads/lang/en_us.json
+++ b/common/src/main/resources/assets/chatheads/lang/en_us.json
@@ -2,12 +2,21 @@
   "text.autoconfig.chat_heads.title": "Chat Heads",
   "text.autoconfig.chat_heads.option.offsetNonPlayerText": "Offset non-player chat text",
   "text.autoconfig.chat_heads.option.offsetNonPlayerText.@Tooltip": "All text will be aligned if enabled",
+  "text.autoconfig.chat_heads.option.explanation": "\"UUIDs\"? \"Heuristics\"?",
+  "text.autoconfig.chat_heads.option.explanation.@Tooltip[0]": "Normally, servers tell us who sent a message,",
+  "text.autoconfig.chat_heads.option.explanation.@Tooltip[1]": "i.e. the sender's UUID. However, many servers do not",
+  "text.autoconfig.chat_heads.option.explanation.@Tooltip[2]": "or they even send fake UUIDs. In this case we need to use",
+  "text.autoconfig.chat_heads.option.explanation.@Tooltip[3]": "a heuristic, i.e. we guess by the message content.",
+  "text.autoconfig.chat_heads.option.explanation.@Tooltip[4]": "This heuristic is not perfect, so it might mismatch heads.",
+  "text.autoconfig.chat_heads.option.senderDetection": "Sender Detection",
+  "text.autoconfig.chat_heads.option.senderDetection.@Tooltip[0]": "For most servers \"UUID and heuristic\" works fine.",
+  "text.autoconfig.chat_heads.option.senderDetection.@Tooltip[1]": "If the server sends fake UUIDs, \"Heuristic only\"",
+  "text.autoconfig.chat_heads.option.senderDetection.@Tooltip[2]": "has to be used.",
+  "text.autoconfig.chat_heads.option.senderDetection.UUID_ONLY": "UUID only",
+  "text.autoconfig.chat_heads.option.senderDetection.UUID_AND_HEURISTIC": "UUID and heuristic",
+  "text.autoconfig.chat_heads.option.senderDetection.HEURISTIC_ONLY": "Heuristic only",
   "text.autoconfig.chat_heads.option.smartHeuristics": "Smart heuristics",
-  "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip[0]": "Some servers don't tell (the UUID of) who sent a message,",
-  "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip[1]": "so we make a guess based on the content. This can lead to",
-  "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip[2]": "non-player messages getting a chat head.",
-  "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip[3]": "This option disables this guessing if the server sent",
-  "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip[4]": "at least one UUID.",
+  "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip": "Turn off heuristics if the server is known to send UUIDs.",
   "text.chat_heads.config.error.title": "Couldn't open config menu",
   "text.chat_heads.config.error.no_cloth_config": "Cloth Config is not installed!",
   "text.chat_heads.config.error.cloth_config_link": "Open Cloth Config page on CurseForge"
