- rename Defaults to ChatHeadsConfigDefaults - change ChatHeadsConfig into an interface which is implemented by ChatHeadsConfigData and ChatHeadsConfigDefaults - move common cloth-config code into ClothConfigCommonImpl

--- a/common/src/main/resources/assets/chatheads/lang/en_us.json
+++ b/common/src/main/resources/assets/chatheads/lang/en_us.json
@@ -4,8 +4,8 @@
   "text.autoconfig.chat_heads.option.offsetNonPlayerText.@Tooltip": "All text will be aligned if enabled",
   "text.autoconfig.chat_heads.option.explanation": "\"UUIDs\"? \"Heuristics\"?",
   "text.autoconfig.chat_heads.option.explanation.@Tooltip[0]": "Normally, servers tell us who sent a message,",
-  "text.autoconfig.chat_heads.option.explanation.@Tooltip[1]": "i.e. the sender's UUID. However, many servers do not",
-  "text.autoconfig.chat_heads.option.explanation.@Tooltip[2]": "or they even send fake UUIDs. In this case we need to use",
+  "text.autoconfig.chat_heads.option.explanation.@Tooltip[1]": "i.e. the sender's UUID. However, many servers do not.",
+  "text.autoconfig.chat_heads.option.explanation.@Tooltip[2]": "They can even send fake UUIDs. In these cases we need to use",
   "text.autoconfig.chat_heads.option.explanation.@Tooltip[3]": "a heuristic, i.e. we guess by the message content.",
   "text.autoconfig.chat_heads.option.explanation.@Tooltip[4]": "This heuristic is not perfect, so it might mismatch heads.",
   "text.autoconfig.chat_heads.option.senderDetection": "Sender Detection",
@@ -16,7 +16,8 @@
   "text.autoconfig.chat_heads.option.senderDetection.UUID_AND_HEURISTIC": "UUID and heuristic",
   "text.autoconfig.chat_heads.option.senderDetection.HEURISTIC_ONLY": "Heuristic only",
   "text.autoconfig.chat_heads.option.smartHeuristics": "Smart heuristics",
-  "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip": "Turn off heuristics if the server is known to send UUIDs.",
+  "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip[0]": "Turn off heuristics if the server is known to send UUIDs.",
+  "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip[1]": "(Applies to the \"UUID and heuristic\" sender detection)",
   "text.chat_heads.config.error.title": "Couldn't open config menu",
   "text.chat_heads.config.error.no_cloth_config": "Cloth Config is not installed!",
   "text.chat_heads.config.error.cloth_config_link": "Open Cloth Config page on CurseForge"
