--- a/common/src/main/resources/assets/chat_heads/lang/en_us.json
+++ b/common/src/main/resources/assets/chat_heads/lang/en_us.json
@@ -18,6 +18,11 @@
   "text.autoconfig.chat_heads.option.smartHeuristics": "Smart heuristics",
   "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip[0]": "Turn off heuristics if the server is known to send UUIDs.",
   "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip[1]": "(Applies to the \"UUID and heuristic\" sender detection)",
+  "text.autoconfig.chat_heads.option.nameAliases": "Name aliases",
+  "text.autoconfig.chat_heads.option.nameAliases.@Tooltip[0]": "Some servers allow setting nicknames which can't automatically be matched.",
+  "text.autoconfig.chat_heads.option.nameAliases.@Tooltip[1]": "Here you can manually match those nicknames to their profile name, like:",
+  "text.autoconfig.chat_heads.option.nameAliases.@Tooltip[2]": "nickname -> profilename",
+  "text.autoconfig.chat_heads.option.nameAliases.@Tooltip[3]": "nick1 nick2 nick3 -> profilename",
   "text.chat_heads.config.error.title": "Couldn't open config menu",
   "text.chat_heads.config.error.no_cloth_config": "Cloth Config is not installed!",
   "text.chat_heads.config.error.cloth_config_link": "Open Cloth Config page on CurseForge"
