use \n in tooltips instead of hardcoding the line count

--- a/common/src/main/resources/assets/chat_heads/lang/fr_fr.json
+++ b/common/src/main/resources/assets/chat_heads/lang/fr_fr.json
@@ -3,26 +3,16 @@
   "text.autoconfig.chat_heads.option.offsetNonPlayerText": "Décaler les textes non-joueur du chat",
   "text.autoconfig.chat_heads.option.offsetNonPlayerText.@Tooltip": "Tout le texte sera aligné si activé",
   "text.autoconfig.chat_heads.option.explanation": "\"UUID\" ? \"Heuristique\" ?",
-  "text.autoconfig.chat_heads.option.explanation.@Tooltip[0]": "Normalement, les serveurs nous disent qui a envoyé un message,",
-  "text.autoconfig.chat_heads.option.explanation.@Tooltip[1]": "ex. l'UUID de l'expéditeur. Cependant, de nombreux serveurs ne le font pas.",
-  "text.autoconfig.chat_heads.option.explanation.@Tooltip[2]": "Ils peuvent même envoyer de faux UUID. Dans ces cas, nous devons utiliser",
-  "text.autoconfig.chat_heads.option.explanation.@Tooltip[3]": "une heuristique, ex. on devine par le contenu du message.",
-  "text.autoconfig.chat_heads.option.explanation.@Tooltip[4]": "Cette heuristique n'est pas parfaite, elle peut donc ne pas correspondre aux têtes.",
+  "text.autoconfig.chat_heads.option.explanation.@Tooltip": "Normalement, les serveurs nous disent qui a envoyé un message,\nex. l'UUID de l'expéditeur. Cependant, de nombreux serveurs ne le font pas.\nIls peuvent même envoyer de faux UUID. Dans ces cas, nous devons utiliser\nune heuristique, ex. on devine par le contenu du message.\nCette heuristique n'est pas parfaite, elle peut donc ne pas correspondre aux têtes.",
   "text.autoconfig.chat_heads.option.senderDetection": "Détection de l'expéditeur",
-  "text.autoconfig.chat_heads.option.senderDetection.@Tooltip[0]": "Pour la plupart des serveurs \"UUID et heuristique\" marchent bien.",
-  "text.autoconfig.chat_heads.option.senderDetection.@Tooltip[1]": "Si le serveur envoie de faux UUIDs, \"Heuristique uniquement\"",
-  "text.autoconfig.chat_heads.option.senderDetection.@Tooltip[2]": "doit être utilisé.",
+  "text.autoconfig.chat_heads.option.senderDetection.@Tooltip": "Pour la plupart des serveurs \"UUID et heuristique\" marchent bien.\nSi le serveur envoie de faux UUIDs, \"Heuristique uniquement\"\ndoit être utilisé.",
   "text.autoconfig.chat_heads.option.senderDetection.UUID_ONLY": "UUID uniquement",
   "text.autoconfig.chat_heads.option.senderDetection.UUID_AND_HEURISTIC": "UUID et heuristique",
   "text.autoconfig.chat_heads.option.senderDetection.HEURISTIC_ONLY": "Heuristique uniquement",
   "text.autoconfig.chat_heads.option.smartHeuristics": "Heuristique intelligente",
-  "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip[0]": "Désactive l'heuristique si le serveur est connu pour envoyer des UUID.",
-  "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip[1]": "(S'applique à la détection de l'expéditeur \"UUID et heuristique\")",
+  "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip": "Désactive l'heuristique si le serveur est connu pour envoyer des UUID.\n(S'applique à la détection de l'expéditeur \"UUID et heuristique\")",
   "text.autoconfig.chat_heads.option.nameAliases": "Alias de noms",
-  "text.autoconfig.chat_heads.option.nameAliases.@Tooltip[0]": "Certains serveurs permettent de définir des surnoms qui ne peuvent pas être automatiquement mis en correspondance.",
-  "text.autoconfig.chat_heads.option.nameAliases.@Tooltip[1]": "Ici, vous pouvez faire correspondre manuellement ces surnoms à leur nom de profil, comme :",
-  "text.autoconfig.chat_heads.option.nameAliases.@Tooltip[2]": "surnom -> nom de profil",
-  "text.autoconfig.chat_heads.option.nameAliases.@Tooltip[3]": "surnom1 surnom2 surnom3 -> nom de profil",
+  "text.autoconfig.chat_heads.option.nameAliases.@Tooltip": "Certains serveurs permettent de définir des surnoms qui ne peuvent pas être automatiquement mis en correspondance.\nIci, vous pouvez faire correspondre manuellement ces surnoms à leur nom de profil, comme:\nsurnom -> nom de profil\nsurnom1 surnom2 surnom3 -> nom de profil",
   "text.chat_heads.config.error.title": "Impossible d'ouvrir le menu de configuration",
   "text.chat_heads.config.error.no_cloth_config": "Cloth Config n'est pas installé !",
   "text.chat_heads.config.error.cloth_config_link": "Ouvrir la page CurseForge de Cloth Config"
