--- a/common/src/main/resources/assets/chat_heads/lang/zh_cn.json
+++ b/common/src/main/resources/assets/chat_heads/lang/zh_cn.json
@@ -4,16 +4,16 @@
   "text.autoconfig.chat_heads.option.offsetNonPlayerText": "偏移非玩家聊天文本",
   "text.autoconfig.chat_heads.option.offsetNonPlayerText.@Tooltip": "启用后所有文本都将对齐",
   "text.autoconfig.chat_heads.option.explanation": "“UUID”？“启发式方法”？",
-  "text.autoconfig.chat_heads.option.explanation.@Tooltip": "通常，服务器会告诉我们谁发送了消息，即发送者的UUID。\n但是，许多服务器没有这么做，甚至会发送假的UUID。\n这时我们需要使用启发式方法，即通过消息内容去猜测。\n这种启发式方法并不完美，因此它可能会弄错头像。",
+  "text.autoconfig.chat_heads.option.explanation.@Tooltip": "“UUID”？“启发式方法”？\n通常，服务器会告诉我们谁发送了消息，即发送者的UUID。\n但是，许多服务器没有这么做，甚至会发送假的UUID。\n这时我们需要使用启发式方法，即通过消息内容去猜测。\n这种启发式方法并不完美，因此它可能会弄错头像。",
   "text.autoconfig.chat_heads.option.senderDetection": "发送者检测",
-  "text.autoconfig.chat_heads.option.senderDetection.@Tooltip": "“UUID和启发式方法”在大多数服务器上都能正常工作。\n如果服务器发送假的UUID，必须使用“仅启发式方法”。",
+  "text.autoconfig.chat_heads.option.senderDetection.@Tooltip": "发送者检测\n“UUID和启发式方法”在大多数服务器上都能正常工作。\n如果服务器发送假的UUID，必须使用“仅启发式方法”。",
   "text.autoconfig.chat_heads.option.senderDetection.UUID_ONLY": "仅UUID",
   "text.autoconfig.chat_heads.option.senderDetection.UUID_AND_HEURISTIC": "UUID和启发式方法",
   "text.autoconfig.chat_heads.option.senderDetection.HEURISTIC_ONLY": "仅启发式方法",
   "text.autoconfig.chat_heads.option.smartHeuristics": "智能启发式方法",
-  "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip": "得知服务器发送UUID后，自动关闭启发式方法。\n（发送者检测设为“UUID和启发式方法”时适用）",
+  "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip": "智能启发式方法\n得知服务器发送UUID后，自动关闭启发式方法。\n（发送者检测设为“UUID和启发式方法”时适用）",
   "text.autoconfig.chat_heads.option.nameAliases": "别名",
-  "text.autoconfig.chat_heads.option.nameAliases.@Tooltip": "一些服务器允许设置昵称，这些昵称不会自动匹配。\n你可以在这里手动将这些昵称和对应的用户名匹配起来。像这样：\n昵称 -> 用户名\n昵称1 昵称2 昵称3 -> 用户名",
+  "text.autoconfig.chat_heads.option.nameAliases.@Tooltip": "别名\n一些服务器允许设置昵称，这些昵称不会自动匹配。\n你可以在这里手动将这些昵称和对应的用户名匹配起来。就像这样：\n昵称 -> 用户名\n昵称1 昵称2 昵称3 -> 用户名",
   "text.chat_heads.config.error.title": "无法打开配置菜单",
   "text.chat_heads.config.error.no_cloth_config": "未安装Cloth Config！",
   "text.chat_heads.config.error.cloth_config_link": "打开Cloth Config的CurseForge页面"
