Add ja_jp translation of handleSystemMessages option

--- a/common/src/main/resources/assets/chat_heads/lang/ja_jp.json
+++ b/common/src/main/resources/assets/chat_heads/lang/ja_jp.json
@@ -12,6 +12,8 @@
 	"text.autoconfig.chat_heads.option.senderDetection.UUID_AND_HEURISTIC": "両方",
 	"text.autoconfig.chat_heads.option.senderDetection.HEURISTIC_ONLY": "ヒューリスティックのみ",
 	"text.autoconfig.chat_heads.option.smartHeuristics": "スマートヒューリスティック",
+	"text.autoconfig.chat_heads.option.handleSystemMessages": "システムメッセージの処理",
+	"text.autoconfig.chat_heads.option.handleSystemMessages.@Tooltip": "頭を\"純粋な\"サーバーメッセージに追加するかどうかです．\n多くのサーバー(例えばFreedomChatプラグインを導入している場合)は\nプレイヤーメッセージをサーバーメッセージに変えてしまうことに注意してください！\nこのオプションを無効化するには何を行っているかを理解した場合のみにしてください！",
 	"text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip": "サーバーがUUIDを伝えることが既知の場合，\nヒューリスティックを無効にします．\n(送信者の識別が\"両方\"のときに適用されます．)",
 	"text.autoconfig.chat_heads.option.nameAliases": "ニックネーム",
 	"text.autoconfig.chat_heads.option.nameAliases.@Tooltip": "自動的に一致させられないニックネームを設定できるサーバーもあります．\n以下のように，手動でニックネームをプロフィール名に対応させられます:\nニックネーム -> プロフィール名\nニックネーム1 ニックネーム2 -> プロフィール名",
