--- a/common/src/main/resources/assets/chat_heads/lang/be_by.json
+++ b/common/src/main/resources/assets/chat_heads/lang/be_by.json
@@ -16,5 +16,6 @@
   "text.autoconfig.chat_heads.option.nameAliases.@Tooltip": "Некаторыя сервера дазваляюць ставіць нікнеймы, якія не супадаюць.\nТут вы можаце звязаць нікнейм з именем, напрыклад:\nnickname -> profilename\nnick1 nick2 nick3 -> profilename",
   "text.chat_heads.config.error.title": "Немагчыма адкрыць меню налад",
   "text.chat_heads.config.error.no_cloth_config": "Cloth Config адсутнічае!",
-  "text.chat_heads.config.error.cloth_config_link": "Адкрыць старонку Cloth Config на CurseForge"
+  "text.chat_heads.config.error.cloth_config_curseforge_link": "Адкрыць старонку Cloth Config на CurseForge",
+  "text.chat_heads.config.error.cloth_config_modrinth_link": "Адкрыць старонку Cloth Config на Modrinth"
 }
