--- a/common/src/main/resources/assets/chat_heads/lang/fr_fr.json
+++ b/common/src/main/resources/assets/chat_heads/lang/fr_fr.json
@@ -14,6 +14,7 @@
   "text.autoconfig.chat_heads.option.nameAliases": "Alias de noms",
   "text.autoconfig.chat_heads.option.nameAliases.@Tooltip": "Certains serveurs permettent de définir des surnoms qui ne peuvent pas être automatiquement mis en correspondance.\nIci, vous pouvez faire correspondre manuellement ces surnoms à leur nom de profil, comme:\nsurnom -> nom de profil\nsurnom1 surnom2 surnom3 -> nom de profil",
   "text.chat_heads.config.error.title": "Impossible d'ouvrir le menu de configuration",
-  "text.chat_heads.config.error.no_cloth_config": "Cloth Config n'est pas installé !",
-  "text.chat_heads.config.error.cloth_config_link": "Ouvrir la page CurseForge de Cloth Config"
+  "text.chat_heads.config.error.no_cloth_config": "Cloth Config n'est pas installé!",
+  "text.chat_heads.config.error.cloth_config_curseforge_link": "Ouvrir la page CurseForge de Cloth Config",
+  "text.chat_heads.config.error.cloth_config_modrinth_link": "Ouvrir la page Modrinth de Cloth Config"
 }
