--- a/common/src/main/resources/assets/chat_heads/lang/de_de.json
+++ b/common/src/main/resources/assets/chat_heads/lang/de_de.json
@@ -15,7 +15,7 @@
   "text.autoconfig.chat_heads.option.handleSystemMessages": "Behandle System-Nachrichten",
   "text.autoconfig.chat_heads.option.handleSystemMessages.@Tooltip": "Ob Köpfe zu \"reinen\" Server-Nachrichten hinzugefügt werden können.\nBedenke dass viele Server (z.B. mit dem FreedomChat-Plugin)\nSpieler-Nachrichten in Server-Nachrichten umwandeln!\nDeaktiviere diese Option nur wenn du verstehst was du tust!",
   "text.autoconfig.chat_heads.option.nameAliases": "Pseudonyme",
-  "text.autoconfig.chat_heads.option.nameAliases.@Tooltip": "Manche Server erlauben Spitznamen welche nicht automatisch zugeordnet\nwerden können. Hier können die Spitznamen wie folgt manuell zugeordnet werden:\nSpitzname -> Profilname\nName1 Name2 Name3 -> Profilname",
+  "text.autoconfig.chat_heads.option.nameAliases.@Tooltip": "Manche Server erlauben Spitznamen welche nicht automatisch zugeordnet\nwerden können. Hier können die Spitznamen wie folgt manuell zugeordnet werden:\nSpitzname -> Profilname",
   "text.chat_heads.config.error.title": "Konnte Konfigurationsmenü nicht öffnen",
   "text.chat_heads.config.error.no_cloth_config": "Cloth Config ist nicht installiert!",
   "text.chat_heads.config.error.cloth_config_curseforge_link": "Cloth Config Seite auf CurseForge öffnen",
