--- a/common/src/main/resources/assets/chat_heads/lang/uk_ua.json
+++ b/common/src/main/resources/assets/chat_heads/lang/uk_ua.json
@@ -12,7 +12,7 @@
   "text.autoconfig.chat_heads.option.smartHeuristics": "Розумне припущення",
   "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip": "Не припускати особу відправника, якщо відомо, що сервер\nвідправляє справжні UUID.\n(Застосовується при встановленні значення \"UUID та припущення\"\nпараметру \"Визначення відправника\")",
   "text.autoconfig.chat_heads.option.nameAliases": "Псевдоніми",
-  "text.autoconfig.chat_heads.option.nameAliases.@Tooltip": "Деякі сервери дозволяють встановлювати псевдоніми, які автоматично\nне визначаються. Тут ви можете самостійно співставити псевдоніми\nта їх профільні імена за наступним зразком:\nпсевдонім -> ім'яПрофілю\nпсевдо1 псевдо2 псевдо3 -> ім'яПрофілю",
+  "text.autoconfig.chat_heads.option.nameAliases.@Tooltip": "Деякі сервери дозволяють встановлювати псевдоніми, які автоматично\nне визначаються. Тут ви можете самостійно співставити псевдоніми\nта їх профільні імена за наступним зразком:\nпсевдонім -> ім'яПрофілю",
   "text.chat_heads.config.error.title": "Неможливо відкрити меню параметрів",
   "text.chat_heads.config.error.no_cloth_config": "Не встановлено мод Cloth Config!",
   "text.chat_heads.config.error.cloth_config_curseforge_link": "Відкрити сторінку мода Cloth Config на CurseForge",
