Fix traditional Chinese localization

--- a/common/src/main/resources/assets/chat_heads/lang/zh_tw.json
+++ b/common/src/main/resources/assets/chat_heads/lang/zh_tw.json
@@ -1,23 +1,23 @@
 {
-  "modmenu.descriptionTranslation.chat_heads": "能看見誰在和你聊天！\n這個模組在玩家的聊天資訊旁邊加入了他們的頭像。",
-  "text.autoconfig.chat_heads.title": "聊天頭像",
-  "text.autoconfig.chat_heads.option.offsetNonPlayerText": "偏移非玩家聊天文字",
-  "text.autoconfig.chat_heads.option.offsetNonPlayerText.@Tooltip": "啟用後所有文字都將對齊",
-  "text.autoconfig.chat_heads.option.explanation": "“UUID”？“啟發式方法”？",
-  "text.autoconfig.chat_heads.option.explanation.@Tooltip": "通常，伺服器會告訴我們誰發送了訊息，即發送者的UUID。\n但是，許多伺服器沒有這麼做，甚至會發送假的UUID。\n這時我們需要使用啟發式方法，即透過訊息內容去猜測。\n這種啟發式方法並不完美，因此它可能會弄錯頭像。",
-  "text.autoconfig.chat_heads.option.senderDetection": "發送者檢測",
-  "text.autoconfig.chat_heads.option.senderDetection.@Tooltip": "“UUID和啟發式方法”在大多數伺服器上都能正常工作。\n如果伺服器發送假的UUID，必須使用“僅啟發式方法”。",
-  "text.autoconfig.chat_heads.option.senderDetection.UUID_ONLY": "僅UUID",
-  "text.autoconfig.chat_heads.option.senderDetection.UUID_AND_HEURISTIC": "UUID和啟發式方法",
-  "text.autoconfig.chat_heads.option.senderDetection.HEURISTIC_ONLY": "僅啟發式方法",
-  "text.autoconfig.chat_heads.option.smartHeuristics": "智慧啟發式方法",
-  "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip": "得知伺服器發送UUID後，自動關閉啟發式方法。\n（發送者檢測設為“UUID和啟發式方法”時適用）",
-  "text.autoconfig.chat_heads.option.handleSystemMessages": "處理系統資訊",
-  "text.autoconfig.chat_heads.option.handleSystemMessages.@Tooltip": "能否為“純伺服器訊息”加入聊天頭像\n註：許多伺服器會將玩家訊息轉為伺服器訊息！（如裝了 FreedomChat 插件的伺服器）\n僅當你完全清楚自己在幹什麼的情況下停用此選項！",
-  "text.autoconfig.chat_heads.option.nameAliases": "別名",
-  "text.autoconfig.chat_heads.option.nameAliases.@Tooltip": "一些伺服器允許設置暱稱，這些暱稱不會自動匹配。\n你可以在這裡手動將這些暱稱和對應的使用者名匹配起來。就像這樣：\n暱稱 -> 使用者名",
-  "text.chat_heads.config.error.title": "無法打開配置菜單",
-  "text.chat_heads.config.error.no_cloth_config": "未安裝Cloth Config！",
-  "text.chat_heads.config.error.cloth_config_curseforge_link": "打開Cloth Config的CurseForge頁面",
-  "text.chat_heads.config.error.cloth_config_modrinth_link": "打開Cloth Config的Modrinth頁面"
+  "modmenu.descriptionTranslation.chat_heads": "用直觀的方式查看誰在跟你聊天！\n這個模組在聊天訊息前增加了玩家頭貼。",
+  "text.autoconfig.chat_heads.title": "聊天室頭貼",
+  "text.autoconfig.chat_heads.option.offsetNonPlayerText": "非玩家的聊天訊息偏移值",
+  "text.autoconfig.chat_heads.option.offsetNonPlayerText.@Tooltip": "當啟用時，所有訊息將會被對齊",
+  "text.autoconfig.chat_heads.option.explanation": "「UUID」？「啟發式」？",
+  "text.autoconfig.chat_heads.option.explanation.@Tooltip": "普通情況下，伺服器將會告訴你誰傳送的訊息，\n例如：傳送者的 UUID。然而，有許多伺服器不會這麼做。\n它們甚至傳送虛假的 UUID。在這種情況下我們會\n需要使用「啟發式」偵測。亦即是我們依照訊息內容來推測。\n啟發式並不是完美的，所以它有可能會出現不相符的頭貼。",
+  "text.autoconfig.chat_heads.option.senderDetection": "傳送者偵測",
+  "text.autoconfig.chat_heads.option.senderDetection.@Tooltip": "對於大多數伺服器來說，「UUID 和啟發式」將會運作的很正常\n如果伺服器傳送虛假的 UUID，「僅啟發式」\n將是你適合使用的。",
+  "text.autoconfig.chat_heads.option.senderDetection.UUID_ONLY": "僅 UUID",
+  "text.autoconfig.chat_heads.option.senderDetection.UUID_AND_HEURISTIC": "UUID 和啟發式",
+  "text.autoconfig.chat_heads.option.senderDetection.HEURISTIC_ONLY": "僅啟發式",
+  "text.autoconfig.chat_heads.option.smartHeuristics": "智慧啟發式",
+  "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip": "如果已經知道伺服器是傳送 UUID，請關掉啟發式。\n（適用於「UUID 和啟發式」傳送者偵測）",
+  "text.autoconfig.chat_heads.option.handleSystemMessages": "處理系統訊息",
+  "text.autoconfig.chat_heads.option.handleSystemMessages.@Tooltip": "是否可以將頭貼套用在「純」伺服器訊息中。\n注意有很多伺服器將玩家訊息轉換成伺服器訊息！\n（例如正在執行 FreedomChat 插件的伺服器）\n僅在你知道自己在做什麼時關閉這項選項！",
+  "text.autoconfig.chat_heads.option.nameAliases": "名稱別名",
+  "text.autoconfig.chat_heads.option.nameAliases.@Tooltip": "有些伺服器允許設定別名，這將無法自動的配對名稱。\n在這裡你可以手動指定配對別名來配對上他們的設定檔名，例如：\nnickname -> profilename\nnick1 nick2 nick3 -> profilename",
+  "text.chat_heads.config.error.title": "無法開啟設定選單",
+  "text.chat_heads.config.error.no_cloth_config": "尚未安裝「Cloth Config」模組！",
+  "text.chat_heads.config.error.cloth_config_link": "在 CurseForge 上開啟 Cloth Config 頁面",
+  "text.chat_heads.config.error.cloth_config_modrinth_link": "在 Modrinth 上開啟 Cloth Config 頁面"
 }
