--- a/common/src/main/resources/assets/chat_heads/lang/ru_ru.json
+++ b/common/src/main/resources/assets/chat_heads/lang/ru_ru.json
@@ -1,6 +1,6 @@
 {
   "modmenu.descriptionTranslation.chat_heads": "Просматривайте, с кем вы общаетесь!\nЭтот мод добавляет головы игроков рядом с их сообщениями в чате.",
-  "text.autoconfig.chat_heads.title": "Головы в чате",
+  "text.autoconfig.chat_heads.title": "Chat Heads",
   "text.autoconfig.chat_heads.option.offsetNonPlayerText": "Смещение текста не-игроков",
   "text.autoconfig.chat_heads.option.offsetNonPlayerText.@Tooltip": "Весь текст будет выровнен, если включено",
   "text.autoconfig.chat_heads.option.explanation": "\"UUID\"? \"Эвристика\"?",
