--- a/common/src/main/resources/assets/chat_heads/lang/en_us.json
+++ b/common/src/main/resources/assets/chat_heads/lang/en_us.json
@@ -2,9 +2,13 @@
   "modmenu.descriptionTranslation.chat_heads": "See who are you chatting with!\nThis mod adds player heads next to their chat messages.",
   "text.autoconfig.chat_heads.title": "Chat Heads",
   "text.autoconfig.chat_heads.option.offsetNonPlayerText": "Offset non-player chat text",
-  "text.autoconfig.chat_heads.option.offsetNonPlayerText.@Tooltip": "All text will be aligned if enabled",
+  "text.autoconfig.chat_heads.option.offsetNonPlayerText.@Tooltip": "All text will be aligned if enabled\nOnly applies to \"Before Line\" rendering",
   "text.autoconfig.chat_heads.option.explanation": "\"UUIDs\"? \"Heuristics\"?",
   "text.autoconfig.chat_heads.option.explanation.@Tooltip": "Normally, servers tell us who sent a message,\ni.e. the sender's UUID. However, many servers do not.\nThey can even send fake UUIDs. In these cases we need to use\na heuristic, i.e. we guess by the message content.\nThis heuristic is not perfect, so it might mismatch heads.",
+  "text.autoconfig.chat_heads.option.renderPosition": "Render Position",
+  "text.autoconfig.chat_heads.option.renderPosition.@Tooltip": "Where to render the chat heads",
+  "text.autoconfig.chat_heads.option.renderPosition.BEFORE_LINE": "Before Line",
+  "text.autoconfig.chat_heads.option.renderPosition.BEFORE_NAME": "Before Name",
   "text.autoconfig.chat_heads.option.senderDetection": "Sender Detection",
   "text.autoconfig.chat_heads.option.senderDetection.@Tooltip": "For most servers \"UUID and heuristic\" works fine.\nIf the server sends fake UUIDs, \"Heuristic only\"\nhas to be used.",
   "text.autoconfig.chat_heads.option.senderDetection.UUID_ONLY": "UUID only",
