--- a/common/src/main/resources/assets/chat_heads/lang/de_de.json
+++ b/common/src/main/resources/assets/chat_heads/lang/de_de.json
@@ -2,9 +2,13 @@
   "modmenu.descriptionTranslation.chat_heads": "Sieh mit wem du chattest!\nDiese Mod fügt Spielerköpfe zum Chat hinzu.",
   "text.autoconfig.chat_heads.title": "Chat Heads",
   "text.autoconfig.chat_heads.option.offsetNonPlayerText": "Nicht-Spieler-Nachrichten verschieben",
-  "text.autoconfig.chat_heads.option.offsetNonPlayerText.@Tooltip": "Richtet allen Text in eine Reihe aus",
+  "text.autoconfig.chat_heads.option.offsetNonPlayerText.@Tooltip": "Richtet allen Text in eine Reihe aus\nHat nur beim \"Vor der Zeile\"-Rendern einen Effekt",
   "text.autoconfig.chat_heads.option.explanation": "\"UUID\"? \"Heuristik\"?",
   "text.autoconfig.chat_heads.option.explanation.@Tooltip": "Normalerweise sagen Server wer eine Nachricht sendet, d.h. die Sender-UUID.\nViele Server tun dies jedoch nicht, sie können sogar falsche UUIDs senden.\nIn diesem Fall nutzen wir eine Heuristik, d.h. wir raten den Sender durch\nden Nachrichteninhalt. Diese Heuristik ist nicht perfekt und kann Köpfe\nfalsch zuordnen.",
+  "text.autoconfig.chat_heads.option.renderPosition": "Render-Position",
+  "text.autoconfig.chat_heads.option.renderPosition.@Tooltip": "Who Spielerköpfe gerendert werden",
+  "text.autoconfig.chat_heads.option.renderPosition.BEFORE_LINE": "Vor der Zeile",
+  "text.autoconfig.chat_heads.option.renderPosition.BEFORE_NAME": "Vor dem Namen",
   "text.autoconfig.chat_heads.option.senderDetection": "Sender-Erkennung",
   "text.autoconfig.chat_heads.option.senderDetection.@Tooltip": "Für die meisten Server funktioniert \"UUID und Heuristik\".\nWenn der Server falsche UUIDs sendet muss \"Nur Heuristik\"\nbenutzt werden.",
   "text.autoconfig.chat_heads.option.senderDetection.UUID_ONLY": "Nur UUID",
