--- a/common/src/main/resources/assets/chat_heads/lang/zh_tw.json
+++ b/common/src/main/resources/assets/chat_heads/lang/zh_tw.json
@@ -2,9 +2,13 @@
   "modmenu.descriptionTranslation.chat_heads": "用直觀的方式查看誰在跟你聊天！\n這個模組在聊天訊息前增加了玩家頭貼。",
   "text.autoconfig.chat_heads.title": "聊天室頭貼",
   "text.autoconfig.chat_heads.option.offsetNonPlayerText": "非玩家的聊天訊息偏移值",
-  "text.autoconfig.chat_heads.option.offsetNonPlayerText.@Tooltip": "當啟用時，所有訊息將會被對齊",
+  "text.autoconfig.chat_heads.option.offsetNonPlayerText.@Tooltip": "啟用後所有文字將會對齊\n僅適用於「行前」繪製方式",
   "text.autoconfig.chat_heads.option.explanation": "「UUID」？「啟發式」？",
   "text.autoconfig.chat_heads.option.explanation.@Tooltip": "普通情況下，伺服器將會告訴你誰傳送的訊息，\n例如：傳送者的 UUID。然而，有許多伺服器不會這麼做。\n它們甚至傳送虛假的 UUID。在這種情況下我們會\n需要使用「啟發式」偵測。亦即是我們依照訊息內容來推測。\n啟發式並不是完美的，所以它有可能會出現不相符的頭貼。",
+  "text.autoconfig.chat_heads.option.renderPosition": "繪製位置",
+  "text.autoconfig.chat_heads.option.renderPosition.@Tooltip": "聊天室頭貼繪製的位置",
+  "text.autoconfig.chat_heads.option.renderPosition.BEFORE_LINE": "行前",
+  "text.autoconfig.chat_heads.option.renderPosition.BEFORE_NAME": "名稱前",
   "text.autoconfig.chat_heads.option.senderDetection": "傳送者偵測",
   "text.autoconfig.chat_heads.option.senderDetection.@Tooltip": "對於大多數伺服器來說，「UUID 和啟發式」將會運作的很正常\n如果伺服器傳送虛假的 UUID，「僅啟發式」\n將是你適合使用的。",
   "text.autoconfig.chat_heads.option.senderDetection.UUID_ONLY": "僅 UUID",
