--- a/common/src/main/resources/assets/chat_heads/lang/ru_ru.json
+++ b/common/src/main/resources/assets/chat_heads/lang/ru_ru.json
@@ -2,7 +2,7 @@
   "modmenu.descriptionTranslation.chat_heads": "Просматривайте, с кем вы общаетесь!\nЭтот мод добавляет головы игроков рядом с их сообщениями в чате.",
   "text.autoconfig.chat_heads.title": "Chat Heads",
   "text.autoconfig.chat_heads.option.offsetNonPlayerText": "Смещение текста не-игроков",
-  "text.autoconfig.chat_heads.option.offsetNonPlayerText.@Tooltip": "Весь текст будет выровнен, если включено",
+  "text.autoconfig.chat_heads.option.offsetNonPlayerText.@Tooltip": "Весь текст будет выровнен, если включено\nПрименяется только к отображению \"Перед строкой\"",
   "text.autoconfig.chat_heads.option.explanation": "\"UUID\"? \"Эвристика\"?",
   "text.autoconfig.chat_heads.option.explanation.@Tooltip": "Обычно серверы сообщают нам, кто отправил сообщение,\nт.е. UUID отправителя. Однако многие серверы этого не делают.\nИногда они даже отправляют фейковые UUID. В таких случаях\nмы используем эвристику, т.е. угадываем по содержанию сообщения.\nЭта эвристика не всегда точна, поэтому головы могут не совпадать.",
   "text.autoconfig.chat_heads.option.renderPosition": "Позиция отображения",
