--- a/common/src/main/resources/assets/chat_heads/lang/zh_cn.json
+++ b/common/src/main/resources/assets/chat_heads/lang/zh_cn.json
@@ -1,23 +1,27 @@
 {
   "modmenu.descriptionTranslation.chat_heads": "能看见谁在和你聊天！\n这个模组在玩家的聊天信息旁边添加了他们的头像。",
   "text.autoconfig.chat_heads.title": "聊天头像",
-  "text.autoconfig.chat_heads.option.offsetNonPlayerText": "偏移非玩家聊天文本",
-  "text.autoconfig.chat_heads.option.offsetNonPlayerText.@Tooltip": "启用后所有文本都将对齐",
-  "text.autoconfig.chat_heads.option.explanation": "“UUID”？“启发式方法”？",
-  "text.autoconfig.chat_heads.option.explanation.@Tooltip": "通常，服务器会告诉我们谁发送了消息，即发送者的UUID。\n但是，许多服务器没有这么做，甚至会发送假的UUID。\n这时我们需要使用启发式方法，即通过消息内容去猜测。\n这种启发式方法并不完美，因此它可能会弄错头像。",
+  "text.autoconfig.chat_heads.option.offsetNonPlayerText": "偏移非玩家聊天的文本",
+  "text.autoconfig.chat_heads.option.offsetNonPlayerText.@Tooltip": "启用后所有文本都将自动对齐\n仅在“在聊天行前”渲染位置中生效。",
+  "text.autoconfig.chat_heads.option.explanation": "“直接使用收到的 UUID” 还是 “自动推理正确玩家”？",
+  "text.autoconfig.chat_heads.option.explanation.@Tooltip": "通常，服务器会告知你消息发送者的 UUID。\n但是，许多服务器并非如此，甚至会发送假的 UUID。\n这时我们需要通过消息内容去自动推理正确的发送者。\n不过这种算法并不完美，因此也可能会弄错头像。",
+  "text.autoconfig.chat_heads.option.renderPosition": "渲染位置",
+  "text.autoconfig.chat_heads.option.renderPosition.@Tooltip": "在何处渲染聊天头像\n\n注意：“在玩家名前”可能会与部分模组冲突。\n对于模组 Caxton 和现代化 UI，将自动默认使用“在聊天行前”。",
+  "text.autoconfig.chat_heads.option.renderPosition.BEFORE_LINE": "在聊天行前",
+  "text.autoconfig.chat_heads.option.renderPosition.BEFORE_NAME": "在玩家名前",
   "text.autoconfig.chat_heads.option.senderDetection": "发送者检测",
-  "text.autoconfig.chat_heads.option.senderDetection.@Tooltip": "“UUID和启发式方法”在大多数服务器上都能正常工作。\n如果服务器发送假的UUID，必须使用“仅启发式方法”。",
-  "text.autoconfig.chat_heads.option.senderDetection.UUID_ONLY": "仅UUID",
-  "text.autoconfig.chat_heads.option.senderDetection.UUID_AND_HEURISTIC": "UUID和启发式方法",
-  "text.autoconfig.chat_heads.option.senderDetection.HEURISTIC_ONLY": "仅启发式方法",
-  "text.autoconfig.chat_heads.option.smartHeuristics": "智能启发式方法",
-  "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip": "得知服务器发送UUID后，自动关闭启发式方法。\n（发送者检测设为“UUID和启发式方法”时适用）",
+  "text.autoconfig.chat_heads.option.senderDetection.@Tooltip": "“UUID 和自动推理”在大多数服务器上都能正常工作。\n但如果服务器发送假的 UUID，必须使用“仅自动推理正确玩家”。",
+  "text.autoconfig.chat_heads.option.senderDetection.UUID_ONLY": "仅直接使用 UUID",
+  "text.autoconfig.chat_heads.option.senderDetection.UUID_AND_HEURISTIC": "UUID 和自动推理",
+  "text.autoconfig.chat_heads.option.senderDetection.HEURISTIC_ONLY": "仅自动推理正确玩家",
+  "text.autoconfig.chat_heads.option.smartHeuristics": "智能自动推理",
+  "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip": "在得知服务器发送的 UUID 后，自动关闭自动推理。\n（仅在发送者检测设为“UUID 和自动推理”时生效）",
   "text.autoconfig.chat_heads.option.handleSystemMessages": "处理系统信息",
-  "text.autoconfig.chat_heads.option.handleSystemMessages.@Tooltip": "能否为“纯服务器消息”添加聊天头像\n注：许多服务器会将玩家消息转为服务器消息！（如装了 FreedomChat 插件的服务器）\n仅当你完全清楚自己在干什么的情况下禁用此选项！",
-  "text.autoconfig.chat_heads.option.nameAliases": "别名",
-  "text.autoconfig.chat_heads.option.nameAliases.@Tooltip": "一些服务器允许设置昵称，这些昵称不会自动匹配。\n你可以在这里手动将这些昵称和对应的用户名匹配起来。就像这样：\n昵称 -> 用户名",
+  "text.autoconfig.chat_heads.option.handleSystemMessages.@Tooltip": "是否为“纯服务器消息”添加聊天头像\n注：许多服务器会将玩家消息转为服务器消息！（如装了 FreedomChat 插件的服务器）\n仅当你完全清楚自己在干什么的情况下才禁用此选项！",
+  "text.autoconfig.chat_heads.option.nameAliases": "玩家名昵称",
+  "text.autoconfig.chat_heads.option.nameAliases.@Tooltip": "一些服务器允许为玩家设置昵称，这些昵称不会自动匹配其对应玩家的头像。\n你可以在此处手动将这些昵称和对应的用户名匹配起来。格式形如：\n昵称 -> 用户名",
   "text.chat_heads.config.error.title": "无法打开配置菜单",
-  "text.chat_heads.config.error.no_cloth_config": "未安装Cloth Config！",
-  "text.chat_heads.config.error.cloth_config_curseforge_link": "打开Cloth Config的CurseForge页面",
-  "text.chat_heads.config.error.cloth_config_modrinth_link": "打开Cloth Config的Modrinth页面"
+  "text.chat_heads.config.error.no_cloth_config": "未安装 Cloth Config！",
+  "text.chat_heads.config.error.cloth_config_curseforge_link": "打开 Cloth Config 的 CurseForge 页面",
+  "text.chat_heads.config.error.cloth_config_modrinth_link": "打开 Cloth Config 的 Modrinth 页面"
 }
