--- a/common/src/main/resources/assets/chat_heads/lang/en_us.json
+++ b/common/src/main/resources/assets/chat_heads/lang/en_us.json
@@ -18,8 +18,10 @@
   "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip": "Turn off heuristics if the server is known to send UUIDs.\n(Applies to the \"UUID and heuristic\" sender detection)",
   "text.autoconfig.chat_heads.option.handleSystemMessages": "Handle system messages",
   "text.autoconfig.chat_heads.option.handleSystemMessages.@Tooltip": "Whether heads can be added to \"pure\" server messages.\nNote that many servers (e.g. running the FreedomChat plugin)\nturn player messages into server messages!\nOnly disable this option if you know what you are doing!",
-  "text.autoconfig.chat_heads.option.nameAliases": "Name aliases",
+  "text.autoconfig.chat_heads.option.nameAliases": "Name Aliases",
   "text.autoconfig.chat_heads.option.nameAliases.@Tooltip": "Some servers allow setting nicknames which can't automatically be matched.\nHere you can manually match those nicknames to their profile name, like:\nnickname -> profilename",
+  "text.autoconfig.chat_heads.option.detectNameAliases": "Auto-detect Name Aliases",
+  "text.autoconfig.chat_heads.option.detectNameAliases.@Tooltip": "This will look for responses to /realname commands on\nEssentialsX servers and automatically add an alias for it.",
   "text.autoconfig.chat_heads.option.drawShadow": "Render Shadow",
   "text.chat_heads.config.error.title": "Couldn't open config menu",
   "text.chat_heads.config.error.no_cloth_config": "Cloth Config is not installed!",
